import java.util.ArrayList;

    public class AuthorsCollectionArrayList {
        
        ArrayList <Author> authorArrayList = new ArrayList<>();

    //for some reason it doeasnt work. to clarify!
    @Override
    public String toString() {
        return  "000";
    }
}
