@startuml

title __DOCUMENTS's Class Diagram__\n

  package  {
    class Author {
    }
  }
  

  package  {
    class AuthorsCollectionArrayList {
    }
  }
  

  package  {
    class AuthorsCollectionTreeSet {
    }
  }
  

  package  {
    class CanModify {
    }
  }
  

  package  {
    abstract class Documents {
    }
  }
  

  package  {
    class FullRights {
    }
  }
  

  package  {
    class MediaDoc {
    }
  }
  

  package  {
    class PdfDoc {
    }
  }
  

  package  {
    class PictureDoc {
    }
  }
  

  package  {
    class Program {
    }
  }
  

  package  {
    class ReadOnly {
    }
  }
  

  package  {
    interface TestInteface {
    }
  }
  

  package  {
    class TextDoc {
    }
  }
  

  package  {
    class VideoDoc {
    }
  }
  

  package  {
    class WordDoc {
    }
  }
  

  CanModify -up-|> ReadOnly
  Documents o-- Author : author
  FullRights -up-|> CanModify
  MediaDoc -up-|> TestInteface
  MediaDoc -up-|> Documents
  PdfDoc -up-|> TextDoc
  PictureDoc -up-|> MediaDoc
  ReadOnly -up-|> Author
  TextDoc -up-|> Documents
  VideoDoc -up-|> MediaDoc
  WordDoc -up-|> TestInteface
  WordDoc -up-|> TextDoc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
